--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/1freelipe/server-express#readme",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.17.1"
   },
   "devDependencies": {
