--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   },
   "homepage": "https://github.com/1freelipe/server-express#readme",
   "dependencies": {
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "core-js": "^3.44.0",
     "css-loader": "^7.1.2",
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^4.17.1",
+    "express-session": "^1.18.2",
     "mongoose": "^8.17.1",
     "regenerator-runtime": "^0.14.1",
     "style-loader": "^4.0.0"
